tests/sumo/basic/person/errors/umsuitable_vclass/errors.sumo
Warning: Person 'p1' receives type 'pedType' which implicitly uses unsuitable vClass 'passenger'.
